fixed horizontal scroll bug with widnows

--- a/public/stylesheets/basic-theme.css
+++ b/public/stylesheets/basic-theme.css
@@ -298,7 +298,9 @@ ol, ul {
   margin-right: auto;
   margin-left: auto;
   height: 100%;
-  overflow: scroll;
+  /*overflow: scroll;*/
+  overflow-y: scroll; 
+  overflow-x:hidden;
   -webkit-overflow-scrolling: touch;
 }
 
